Доработаны списки бронирований
